--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,17 +1,28 @@
-name: publish NPM Project
+name: Publish to NPM
 
 on:
-  push:
-    branches: [main]
+  release:
+    types: [created]
 
 jobs:
   publish: # JOB
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Node
-        uses: actions/setup-node@v1
+      - name: Checkout code 😁
+        uses: actions/checkout@v3
+
+      - name: Setup Node 😎
+        uses: actions/setup-node@v3
         with:
           node-version: "10.x"
+
+      - name: Install Dependences and Build 😱
+        run: npm ci && npm run build
+
+      - name: Publish package on NPM
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.PUBLISH_NPM }}
 
       - name: TESTEEEE
         shell: bash
