--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-valisk",
   "version": "1.0.0",
+  "description": "Validações e máscaras para seus dados, e o melhor, tudo em forma de Hooks!",
   "keywords": [
     "react",
     "valisk",
