--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,8 +1,9 @@
 name: Publish to NPM
 
 on:
-  release:
-    types: [created]
+  # release:
+  #   types: [created]
+  push: [main]
 
 jobs:
   publish: # JOB
@@ -18,6 +19,9 @@ jobs:
 
       - name: Install Dependences and Build 😱
         run: npm ci && npm run build
+
+      - name: Keep same version (litte time)
+        run: npm version 1.0.0 --allow-same-version
 
       - name: Publish package on NPM
         run: npm publish
