--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -3,7 +3,8 @@ name: Publish to NPM
 on:
   # release:
   #   types: [created]
-  push: [main]
+  push:
+    branches: [main]
 
 jobs:
   publish: # JOB
