--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,14 +1,19 @@
 name: Publish to NPM
 
 on:
-  # release:
-  #   types: [created]
-  push:
-    branches: [main]
+  push: 
+    branches: [ main ]
+  
+# release:
+# types: [created]
 
 jobs:
   publish: # JOB
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout code 😁
         uses: actions/checkout@v3
@@ -21,10 +26,14 @@ jobs:
       - name: Install Dependences and Build 😱
         run: npm ci && npm run build
 
-      - name: Keep same version (litte time)
+      - name: Keep same version (litte time) 🤗 version = ${{ github.GITHUB_REF }}
+        env: 
+          token-repo: ${{ secrets.ACCESS_TO_REPO }}
+          
+        if: ${{ github.GITHUB_EVENT_NAME === push || github.GITHUB_EVENT_NAME === release}}
         run: npm version 1.0.0 --allow-same-version
 
-      - name: Publish package on NPM
+      - name: Publish package on NPM 😏
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.PUBLISH_NPM }}
