--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,6 +16,11 @@ jobs:
       packages: write
 
     steps:
+      - name: Account
+        run: 
+          git config --global user.email "mauriciomuller2012@gmail.com"
+          git config --global user.name "maummuler"
+    
       - name: Checkout code 😁
         uses: actions/checkout@v3
 
