--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - name: Testing Event
-        run: echo "dia da semana - $DAY"
+        run: echo "Dia da semana - $DAY"
 
       # - name: Account Configuration
       #   run: git config --global user.email "mauriciomuller2012@gmail.com" &&
