--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -15,8 +15,9 @@ jobs:
     steps:
       - name: get and salve number
         shell: bash
-        run: |
-          versionNumber="$(cat ./package.json | jq '."version"')"
+        run:
+          ls
+          versionNumber="$(cat package.json | jq '."version"')"
           echo $versionNumber
           echo 'VERSION_PACKAGE='$versionNumber >> $GITHUB_ENV
 
