--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: get and salve number
-        shell: bash
+        # shell: bash
         run: 
           ls
           
