--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -15,12 +15,10 @@ jobs:
     steps:
       - name: get and salve number
         # shell: bash
-        run: 
+        run: |
           ls
-          
-          # versionNumber="$(cat package.json | jq '."version"')"
-          
-          # echo $versionNumber
+          versionNumber="$(cat ../../package.json | jq '."version"')"
+          echo $versionNumber
           
           # echo 'VERSION_PACKAGE='$versionNumber >> $GITHUB_ENV
 
