--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -14,12 +14,9 @@ jobs:
 
     steps:
       - name: get and salve number
-        # shell: bash
         run: |
-          ls
-          versionNumber="$(cat ../../package.json | jq '."version"')"
+          versionNumber="$(cat package.json | jq '."version"')"
           echo $versionNumber
-          
           # echo 'VERSION_PACKAGE='$versionNumber >> $GITHUB_ENV
 
         env:
