--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -20,12 +20,9 @@ jobs:
         run: |
           versionNumber="$(cat package.json | jq '."version"')"
           echo $versionNumber
-          # echo 'VERSION_PACKAGE='$versionNumber >> $GITHUB_ENV
-
+          echo 'VERSION_PACKAGE='$versionNumber >> $GITHUB_ENV
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OWNER: ${{ github.repository_owner }}
-          REPO: ${{ github.event.repository.name }}
 
       - name: Test env variable
         run: echo "Versão do pacote - $VERSION_PACKAGE"
