--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -18,7 +18,7 @@ jobs:
     
       - name: get and salve number
         run: |
-          versionNumber="$(cat package.json | jq '."version"')"
+          versionNumber="$(cat package.json | jq -r '."version"')"
           echo $versionNumber
           echo 'VERSION_PACKAGE='$versionNumber >> $GITHUB_ENV
         env:
