--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -1,4 +1,4 @@
-name: Generate a new release with YML
+name: Generate a new release
 
 on:
   push:
@@ -9,14 +9,32 @@ permissions:
   packages: write
 
 jobs:
+  upgrade_package_version:
+    runs-on: ubuntu-latest
+
+  - name: Checkout
+    uses: actions/checkout@v3
+
+  - name: Setup Node
+    uses: actions/setup-node@v3
+    with:
+      node-version: "16.x"
+      registry-url: "https://registry.npmjs.org"
+
+  - name: Upgrade version Package
+    run: npm version patch
+
+
   salve_package_version:
     runs-on: ubuntu-latest
+
+    needs: upgrade_package_version
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-    
-      - name: get and salve number
+
+      - name: Get version package and storage into env variable
         run: |
           versionNumber="$(cat package.json | jq -r '."version"')"
           echo $versionNumber
@@ -24,5 +42,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Test env variable
+      - name: Use Version Package
         run: echo "Versão do pacote - $VERSION_PACKAGE"
