--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -11,19 +11,18 @@ permissions:
 jobs:
   upgrade_package_version:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-  - name: Checkout
-    uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16.x"
+          registry-url: "https://registry.npmjs.org"
 
-  - name: Setup Node
-    uses: actions/setup-node@v3
-    with:
-      node-version: "16.x"
-      registry-url: "https://registry.npmjs.org"
-
-  - name: Upgrade version Package
-    run: npm version patch
-
+      - name: Upgrade version Package
+        run: npm version patch
 
   salve_package_version:
     runs-on: ubuntu-latest
