--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -21,8 +21,18 @@ jobs:
           node-version: "16.x"
           registry-url: "https://registry.npmjs.org"
 
-      - name: Upgrade version Package
-        run: npm version patch
+      - name: Get version package and storage into env variable
+        run: |
+          versionNumber="$(cat package.json | jq -r '."version"')"
+          echo $versionNumber
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Check Numbers Of Version
+        run: numbersArray=();
+          lengthVersion=`echo $versionNumber | wc -c`;
+          for ((i=0; i<$lengthVersion; i++)); do numbersArray[i] = $versionNumber[i]; done;
+          echo ${numbersArray[@]}
 
   salve_package_version:
     runs-on: ubuntu-latest
