--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -11,25 +11,38 @@ permissions:
 jobs:
   upgrade_package_version:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-  - name: Checkout
-    uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16.x"
+          registry-url: "https://registry.npmjs.org"
 
-  - name: Setup Node
-    uses: actions/setup-node@v3
-    with:
-      node-version: "16.x"
-      registry-url: "https://registry.npmjs.org"
+      - name: Get version package and storage into env variable
+        run: |
+          versionNumber="$(cat package.json | jq -r '."version"')"
+          echo $versionNumber
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  - name: Upgrade version Package
-    run: npm version patch
+      - name: Check Numbers Of Version
+        run: |
+          firstValue=${versionNumber:0:1};
+          secondValue=${versionNumber:2:1};
+          thirtyValue=${versionNumber:4:1};
 
+          if [thirtyValue < 9]; then npm version patch; else npm version minor; fi;
+          if [secondValue == 9]; then npm version major; fi;
+
+          # lengthVersion=`echo $versionNumber | wc -c`;
+          # for((i=0; i<$lengthVersion; i++)); do val=${versionNumber:${i}:1}; if [[ $val =~ [0-9] ]]; then $numbersArray+=($val); fi; done
 
   salve_package_version:
     runs-on: ubuntu-latest
-
     needs: upgrade_package_version
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
