--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -23,8 +23,8 @@ jobs:
 
       - name: get and salve number
         run: |
-          versionNumber="$(cat package.json | jq -r '."version"')"
-          echo $versionNumber;
+          versionNumber="$(cat package.json | jq -r '.version')"
+          echo $versionNumber
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
