--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -24,7 +24,7 @@ jobs:
       - name: get and salve number
         run: |
           versionNumber="$(cat package.json | jq -r '.version')"
-          echo $versionNumber
+         # echo $versionNumber
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
