--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -21,18 +21,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: get and salve number
+      - name: Get Package Version
         run: |
           versionNumber="$(cat package.json | jq -r '.version')"
-         # echo $versionNumber
+          echo $versionNumber
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check Numbers Of Version
         run: |
-          firstValue=${versionNumber:0:1};
-          secondValue=${versionNumber:2:1};
-          thirtyValue=${versionNumber:4:1};
+          firstValue=$((${versionNumber:0:1}));
+          secondValue=$((${versionNumber:2:1}));
+          thirtyValue=$((${versionNumber:4:1}));
 
           if [thirtyValue < 9]; then npm version patch; else npm version minor; fi;
           if [secondValue == 9]; then npm version major; fi;
