--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -30,12 +30,12 @@ jobs:
 
       - name: Check Numbers Of Version
         run: |
-          firstValue=$((${versionNumber:0:1}));
-          secondValue=$((${versionNumber:2:1}));
-          thirtyValue=$((${versionNumber:4:1}));
+          firstValue=${versionNumber:0:1};
+          secondValue=${versionNumber:2:1};
+          thirtyValue=${versionNumber:4:1};
 
-          if [thirtyValue < 9]; then npm version patch; else npm version minor; fi;
-          if [secondValue == 9]; then npm version major; fi;
+          if [[ $thirtyValue =~ [0-8] ]]; then npm version patch; else npm version minor; fi;
+          if [[ $secondValue =~ [9] ]]; then npm version major; fi;
 
           # lengthVersion=`echo $versionNumber | wc -c`;
           # for((i=0; i<$lengthVersion; i++)); do val=${versionNumber:${i}:1}; if [[ $val =~ [0-9] ]]; then $numbersArray+=($val); fi; done
