--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -23,18 +23,19 @@ jobs:
 
       - name: Get Package Version
         run: |
-          versionNumber="$(cat package.json | jq -r '.version')"
-          echo $versionNumber
+          versionNumber="$(cat package.json | jq -r '.version')";
+          echo $versionNumber;
+          echo 'VERSION_PACKAGE='$versionNumber >> $GITHUB_ENV
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check Numbers Of Version
         run: |
-          firstValue=${versionNumber:0:1};
-          secondValue=${versionNumber:2:1};
-          thirtyValue=${versionNumber:4:1};
+          firstValue=${$VERSION_PACKAGE:0:1};
+          secondValue=${$VERSION_PACKAGE:2:1};
+          thirtyValue=${$VERSION_PACKAGE:4:1};
 
-          if [[ $thirtyValue =~ [0-8] ]]; then npm version patch; echo "terceiro: $thirtyValue"; else npm version minor; echo "segundo: $secondValue"; fi;
+          if [[ $thirtyValue =~ [0-8] ]]; then npm version patch echo "terceiro: $thirtyValue"; else npm version minor echo "segundo: $secondValue"; fi;
           if [[ $secondValue =~ [9] ]]; then npm version major; fi;
 
           # lengthVersion=`echo $versionNumber | wc -c`;
