--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -31,9 +31,9 @@ jobs:
 
       - name: Check Numbers Of Version
         run: |
-          firstValue=${$VERSION_PACKAGE:0:1};
-          secondValue=${$VERSION_PACKAGE:2:1};
-          thirtyValue=${$VERSION_PACKAGE:4:1};
+          firstValue=$VERSION_PACKAGE:0:1;
+          secondValue=$VERSION_PACKAGE:2:1;
+          thirtyValue=$VERSION_PACKAGE:4:1;
 
           if [[ $thirtyValue =~ [0-8] ]]; then npm version patch echo "terceiro: $thirtyValue"; else npm version minor echo "segundo: $secondValue"; fi;
           if [[ $secondValue =~ [9] ]]; then npm version major; fi;
