--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -12,33 +12,46 @@ jobs:
   upgrade_package_version:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: "16.x"
-          registry-url: "https://registry.npmjs.org
+          registry-url: "https://registry.npmjs.org"
 
-      - name: Get version package and storage into env variable
+      - name: Account Configuration
         run: |
-          versionNumber="$(cat package.json | jq -r '."version"')"
-          echo $versionNumber
+          git config --global user.email "mauriciomuller2012@gmail.com" &&
+          git config --global user.name "maummuler"
+
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Get Package Version
+        run: |
+          versionNumber="$(cat package.json | jq -r '.version')";
+          echo 'VERSION_PACKAGE='$versionNumber >> $GITHUB_ENV
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check Numbers Of Version
         run: |
-          firstValue=${versionNumber:0:1};
-          secondValue=${versionNumber:2:1};
-          thirtyValue=${versionNumber:4:1};
+          firstValue=$VERSION_PACKAGE:0:1;
+          secondValue=$VERSION_PACKAGE:2:1;
+          thirtyValue=$VERSION_PACKAGE:4:1;
 
-          if [thirtyValue < 9]; then npm version patch; else npm version minor; fi;
-          if [secondValue == 9]; then npm version major; fi;
+          if [[ $firstValue =~ [0] ]]; then npm version major; fi;
+          if [[ $thirtyValue =~ [0-8] ]]; then npm version patch; else npm version minor; fi;
+          if [[ $secondValue =~ [9] ]]; then npm version major; fi;
 
-          # lengthVersion=`echo $versionNumber | wc -c`;
-          # for((i=0; i<$lengthVersion; i++)); do val=${versionNumber:${i}:1}; if [[ $val =~ [0-9] ]]; then $numbersArray+=($val); fi; done
+      - name: Push new version to main
+        run: git push -u origin main
+
+      - name: Get new package version
+        run: |
+          versionNumber="$(cat package.json | jq -r '.version')";
+          echo 'VERSION_PACKAGE='$versionNumber >> $GITHUB_ENV
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   salve_package_version:
     runs-on: ubuntu-latest
