mudança de local da variavel

--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -57,7 +57,7 @@ jobs:
 
   create_realese:
     runs-on: ubuntu-latest
-    needs: upgrade_package_version
+    # needs: upgrade_package_version
     steps:
       - name: Show last package version
         run: echo $VERSION_PACKAGE
