--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -63,6 +63,6 @@ jobs:
         run: echo $VERSION_PACKAGE
 
       - name: Create realease
-        run: gh release create v$ver_teste -F ./.github/template/REALESE.md
+        run: gh release create v$ver_teste -F '/.github/template/RELEASE.md'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
