--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -10,6 +10,7 @@ permissions:
 
 env:
   ver_teste: "v0.0.1"
+  template_path: ""
 
 jobs:
   # upgrade_package_version:
@@ -63,6 +64,6 @@ jobs:
         run: echo $VERSION_PACKAGE
 
       - name: Create realease
-        run: gh release create v$ver_teste -F '/.github/template/RELEASE.md'
+        run: gh release create v$ver_teste -F 'cd ./.github/template/RELEASE.md'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
