--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -64,6 +64,6 @@ jobs:
         run: echo $VERSION_PACKAGE
 
       - name: Create realease
-        run: gh release create v$ver_teste --generate-notes
+        run: gh release create v1.2.3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
