--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -10,7 +10,6 @@ permissions:
 
 env:
   ver_teste: "v0.0.1"
-  template_path: ""
 
 jobs:
   # upgrade_package_version:
@@ -60,10 +59,18 @@ jobs:
     runs-on: ubuntu-latest
     # needs: upgrade_package_version
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Account Configuration
+        run: |
+          git config --global user.email "mauriciomuller2012@gmail.com" &&
+          git config --global user.name "maummuler"
+
       - name: Show last package version
         run: echo $VERSION_PACKAGE
 
       - name: Create realease
-        run: gh release create v1.2.3
+        run: gh release create v$ver_teste --generate-notes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
