--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -71,6 +71,6 @@ jobs:
         run: echo $VERSION_PACKAGE
 
       - name: Create realease
-        run: gh release create v$ver_teste --generate-notes
+        run: gh release create $ver_teste -F CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
