--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -11,6 +11,10 @@ permissions:
 jobs:
   upgrade_package_version:
     runs-on: ubuntu-latest
+
+    outputs:
+      version_package: ${{ steps.step_version.outputs.VERSION_PACKAGE }}
+
     steps:
       - name: Setup Node
         uses: actions/setup-node@v3
@@ -46,9 +50,10 @@ jobs:
         run: git push -u origin main
 
       - name: Get new package version
+        id: step_version
         run: |
           versionNumber="$(cat package.json | jq -r '.version')";
-          echo 'VERSION_PACKAGE='$versionNumber >> $GITHUB_ENV
+          echo 'VERSION_PACKAGE='$versionNumber >> $GITHUB_OUTPUT
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -60,11 +65,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Show last package version
-        run: echo ${{ env.VERSION_PACKAGE }}
+        run: echo "VERSION_PACKAGE="${{ needs.upgrade_package_version.outputs.version_package }} >> $GITHUB.ENV
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create realease
-        run: gh release create v${{ env.VERSION_PACKAGE }} -F ./CHANGELOG.md
+        run: gh prerelease create v$VERSION_PACKAGE -F ./CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
