--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -65,11 +65,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Show last package version
-        run: echo "VERSION_PACKAGE="${{ needs.upgrade_package_version.outputs.version_package }} >> $GITHUB_ENV
+        run: echo "VERSION_PACKAGE="v${{ needs.upgrade_package_version.outputs.version_package }} >> $GITHUB_ENV
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create realease
-        run: gh release create v$VERSION_PACKAGE -F ./CHANGELOG.md
+        run: gh release create $VERSION_PACKAGE -t "$VERSION_PACKAGE | VALISK" -F ./CHANGELOG.md --latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
