--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -2,7 +2,7 @@ name: Publish package to NPM
 
 on:
   release:
-    types: [published]
+    types: [published, released, created]
 
 permissions:
   contents: write
