--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -9,7 +9,7 @@ permissions:
   packages: write
 
 jobs:
-  upgrade_package_version:
+  get_package_version:
     runs-on: ubuntu-latest
 
     outputs:
@@ -29,27 +29,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Get Package Version
-        run: |
-          versionNumber="$(cat package.json | jq -r '.version')";
-          echo 'VERSION_PACKAGE='$versionNumber >> $GITHUB_ENV
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Check Numbers Of Version
+      #   run: |
+      #     firstValue=$VERSION_PACKAGE:0:1;
+      #     secondValue=$VERSION_PACKAGE:2:1;
+      #     thirtyValue=$VERSION_PACKAGE:4:1;
 
-      - name: Check Numbers Of Version
-        run: |
-          firstValue=$VERSION_PACKAGE:0:1;
-          secondValue=$VERSION_PACKAGE:2:1;
-          thirtyValue=$VERSION_PACKAGE:4:1;
+      #     if [[ $firstValue =~ [0] ]]; then npm version major; fi;
+      #     if [[ $thirtyValue =~ [0-8] ]]; then npm version patch; else npm version minor; fi;
+      #     if [[ $secondValue =~ [9] ]]; then npm version major; fi;
 
-          if [[ $firstValue =~ [0] ]]; then npm version major; fi;
-          if [[ $thirtyValue =~ [0-8] ]]; then npm version patch; else npm version minor; fi;
-          if [[ $secondValue =~ [9] ]]; then npm version major; fi;
+      # - name: Push new version to main
+      #   run: git push -u origin main
 
-      - name: Push new version to main
-        run: git push -u origin main
-
-      - name: Get new package version
+      - name: Get package version
         id: step_version
         run: |
           versionNumber="$(cat package.json | jq -r '.version')";
@@ -59,7 +52,7 @@ jobs:
 
   create_realese:
     runs-on: ubuntu-latest
-    needs: upgrade_package_version
+    needs: get_package_version
     steps:
       - name: Checkout
         uses: actions/checkout@v3
