Atualização de YML e script

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "update": "./scripts/upPackageVersion.sh"
   },
   "dependencies": {
     "react": "^18.2.0",
