--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "update": "./scripts/updatePackage.sh || ./scripts/updatePackage.exe"
+    "update": "./scripts/updatePackage.sh || ./scripts/updatePackage.exe",
+    "downgrade": "npm version 0.0.0"
   },
   "dependencies": {
     "react": "^18.2.0",
