Atualização de workflow, changelog e template

--- a/.github/workflows/publish-package-and-release.yml
+++ b/.github/workflows/publish-package-and-release.yml
@@ -79,6 +79,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create realease
-        run: gh release create $VERSION_PACKAGE -t "$VERSION_PACKAGE | VALISK" -F ./CHANGELOG.md --latest
+        run: gh release create $VERSION_PACKAGE -t "$VERSION_PACKAGE" -F ./.github/template/RELEASE.md --latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
