--- a/.github/workflows/publish-package-and-release.yml
+++ b/.github/workflows/publish-package-and-release.yml
@@ -9,37 +9,8 @@ permissions:
   packages: write
 
 jobs:
-  publish_package:
-    runs-on: "ubuntu-latest"
-    steps:
-      - name: Test code
-        run: echo "Testeeeeee"
-
-      # - name: Account Configuration
-      #   run: |
-      #     git config --global user.email "mauriciomuller2012@gmail.com" &&
-      #     git config --global user.name "maummuler"
-
-      # - name: Setup Node
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: "16.x"
-      #     registry-url: "https://registry.npmjs.org"
-
-      # - name: Checkout code
-      #   uses: actions/checkout@v3
-
-      # - name: Install Dependences and Build
-      #   run: npm ci && npm run build
-
-      # - name: Publish on NPM
-      #   run: npm publish --access public
-      #   env:
-      #     NODE_AUTH_TOKEN: ${{ secrets.PUBLISH_NPM }}
-
   get_package_version:
     runs-on: ubuntu-latest
-    needs: publish_package
 
     outputs:
       version_package: ${{ steps.step_version.outputs.VERSION_PACKAGE }}
@@ -65,6 +36,38 @@ jobs:
           echo 'VERSION_PACKAGE='$versionNumber >> $GITHUB_OUTPUT
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  publish_package:
+    runs-on: "ubuntu-latest"
+    needs: get_package_version
+    steps:
+      - name: Show last package version
+        run: echo "VERSION_PACKAGE="v${{ needs.get_package_version.outputs.version_package }} >> $GITHUB_ENV
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # - name: Account Configuration
+      #   run: |
+      #     git config --global user.email "mauriciomuller2012@gmail.com" &&
+      #     git config --global user.name "maummuler"
+
+      # - name: Setup Node
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: "16.x"
+      #     registry-url: "https://registry.npmjs.org"
+
+      # - name: Checkout code
+      #   uses: actions/checkout@v3
+
+      # - name: Install Dependences and Build
+      #   run: npm ci && npm run build
+
+      # - name: Publish on NPM
+      #   if: ${{ $VERSION_PACKAGE != v0.0.0 }}
+      #   run: npm publish --access public
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.PUBLISH_NPM }}
 
   create_realese:
     runs-on: ubuntu-latest
