--- a/.github/workflows/publish-package-and-release.yml
+++ b/.github/workflows/publish-package-and-release.yml
@@ -64,7 +64,7 @@ jobs:
       #   run: npm ci && npm run build
 
       # - name: Publish on NPM
-      #   if: ${{ $VERSION_PACKAGE != v0.0.0 }}
+      #   if: ${{ env.VERSION_PACKAGE != 'v0.0.0' }}
       #   run: npm publish --access public
       #   env:
       #     NODE_AUTH_TOKEN: ${{ secrets.PUBLISH_NPM }}
@@ -82,7 +82,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create realease
-        if: ${{ $VERSION_PACKAGE != v0.0.0 }}
+        if: ${{ env.VERSION_PACKAGE != 'v0.0.0' }}
         run: gh release create $VERSION_PACKAGE -t "$VERSION_PACKAGE" -F ./.github/template/RELEASE.md --latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
