--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "updateWindows": "./scripts/updatePackage.ps1",
-    "updateLinux": "./scripts/updatePackage.sh",
+    "updateWindows": "realpath ./scripts/updatePackage.ps1",
+    "updateLinux": "realpath ./scripts/updatePackage.sh",
     "downgrade": "npm version 0.0.0"
   },
   "dependencies": {
