--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "updateWindows": "Powershell.exe -File ./scripts/updatePackage.ps1",
-    "updateLinux": "./scripts/updatePackage.sh",
+    "updateLinux": "bash ./scripts/updatePackage.sh",
     "downgrade": "npm version 0.0.0"
   },
   "dependencies": {
