criação do '.npmrc' e package.json, além de incremento do yaml

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-valisk",
+  "name": "@maumuller/react-valisk",
   "version": "0.0.0",
   "description": "Validações e máscaras para seus dados, e o melhor, tudo em forma de Hooks!",
   "keywords": [
@@ -21,6 +21,9 @@
     "url": "https://github.com/MauMuller/react-valisk"
   },
   "type": "module",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
