--- a/.github/workflows/publish-package-and-release.yml
+++ b/.github/workflows/publish-package-and-release.yml
@@ -24,8 +24,6 @@ jobs:
         run: |
           versionNumber="$(cat package.json | jq -r '.version')";
           echo 'VERSION_PACKAGE='$versionNumber >> $GITHUB_OUTPUT
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish_package_github:
     runs-on: "ubuntu-latest"
@@ -44,7 +42,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install Dependences and Build
+      - name: Install Dependences
         run: npm ci
 
       - name: Publish on Github
@@ -61,9 +59,6 @@ jobs:
       - name: Show last package version
         run: echo "VERSION_PACKAGE="v${{ needs.get_package_version.outputs.version_package }} >> $GITHUB_ENV
 
-      - name: Show Version package
-        run: echo $VERSION_PACKAGE
-
       # - name: Account Configuration
       #   run: |
       #     git config --global user.email "mauriciomuller2012@gmail.com" &&
@@ -78,8 +73,8 @@ jobs:
       # - name: Checkout code
       #   uses: actions/checkout@v3
 
-      # - name: Install Dependences and Build
-      #   run: npm ci && npm run build
+      # - name: Install Dependences
+      #   run: npm ci
 
       # - name: Publish on NPM
       #   if: ${{ env.VERSION_PACKAGE != 'v0.0.0' }}
