--- a/.github/workflows/delete-last-release.yml
+++ b/.github/workflows/delete-last-release.yml
@@ -11,7 +11,7 @@ jobs:
 
       - name: Get last tag name
         run: |
-          json=$(gh api repos/maumuller/react-valisk/releases --jq '.[].tag_name');
+          json=$(gh api repos/maumuller/react-valisk/releases --jq '.[0].tag_name');
           echo $json;
           echo 'VERSION_PACKAGE='$json >> $GITHUB_ENV
         env:
