--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@maumuller/react-valisk",
+  "name": "@maumuller/valisk",
   "version": "0.0.0",
   "description": "Validações e máscaras para seus dados, e o melhor, tudo em forma de Hooks!",
   "keywords": [
